add the getNotificationsByUserID api
